# pulse

./: .gitignore  CLAUDE.md  COMMIT_MSG.tmp  Cargo.toml  DELIVERY_REPORT.md  FILES_CREATED.txt  IMPLEMENTATION_CHECKLIST.md  INTELLIGENCE_PIPELINE_PHASE3.md  PHASE3_SUMMARY.md  QUICK_START.md  README.md  README_PHASE3.md  create_repo.bat
.github/workflows/: ci.yaml  release.yaml
config/: default.yaml  example.yaml
docker/: Dockerfile  docker-compose.yaml
src/: main.rs
src/collectors/: github.rs  hackernews.rs  mod.rs  reddit.rs  rss.rs  stocks.rs  videos.rs  weather.rs
src/config/: mod.rs
src/intelligence/: local_llm.rs  mod.rs  remote_llm.rs  scorer.rs  summarizer.rs  tagger.rs
src/scheduler/: mod.rs
src/server/: api.rs  calendar.rs  mod.rs  settings.rs  system.rs  ws.rs  zeroclaw.rs
src/storage/: mod.rs  models.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  styles.css
web/src/components/: Dashboard.tsx  Settings.tsx
web/src/components/settings/: AboutPanel.tsx  DataSourcesPanel.tsx  GeneralPanel.tsx  ModelsPanel.tsx  ProviderCard.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
web/src/components/widgets/: Calendar.tsx  CollectorStatus.tsx  Digest.tsx  NewsFeed.tsx  StockTicker.tsx  SystemMonitor.tsx  Trending.tsx  Videos.tsx  Weather.tsx  ZeroClawAgent.tsx
web/src/hooks/: useWebSocket.ts  useWidgetData.ts
web/src/lib/: widget-size.ts
web/src/types/: index.ts
