[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "A configurable, self-hosted personal intelligence dashboard"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# RSS/Atom parsing
feed-rs = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Embed frontend assets
rust-embed = { version = "8", features = ["mime-guess"] }

# Environment variable substitution
shellexpand = "3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# MIME type detection
mime_guess = "2"

# URL encoding/decoding
urlencoding = "2"

# System monitoring
sysinfo = "0.33"
